# faup

./: .bump  .travis.yml  CMakeGetDistribution.txt  CMakeLists.txt  CMakeOptions.txt  CMakePackage.txt  LICENSE  README  README.md  faup.pc.cmake  index.html  params.json  sonar-project.properties
.github/workflows/: build.yml  cmake.yml
cmake-options/: README.txt
cmake/debian/: postinst
doc/: CMakeLists.txt  FAQ.txt  RESOURCES.txt  cli.md  faq.md  faup.1  internet-explorer_invalid-chars.txt  library.md  python-api.md  snapshots.md
doc/faup-workshop/: Dockerfile  Makefile  faup-wrapper
doc/hacklu2012/: fyodor  index.html  urls
src/: CMakeLists.txt  LICENSE.txt  README.txt
src/data/: CMakeLists.txt  README.txt  mozilla.tlds
src/lib/: CMakeLists.txt  datadir.c  decode.c  emulation.c  faup.c  features.c  furl.c  hash_64a.c  modules.c  options.c  output.c  parson.c  portable.c  snapshot-file.c  snapshot.c  tld-tree.c  tld.c  utils.c  webserver.c
src/lib/b64/: cdecode.c  cencode.c
src/lib/bindings/python/: README.rst  issue36.py  issue93.py  setup.py  test.py  upload-to-pypi.sh
src/lib/bindings/python/debian/: changelog  control  rules
src/lib/bindings/python/examples/multithreads/: test.py  thread_faup.py
src/lib/bindings/python/pyfaup/: .tld_set  __init__.py  __version__.py  bind.py  faup.py  functions.py  furl.py  tldextract.py
src/lib/bindings/python/pyfaup/Darwin/arm64/: libfaupl.dylib
src/lib/bindings/python/pyfaup/Darwin/x86_64/: libfaupl.dylib
src/lib/bindings/python/pyfurl/: __init__.py  functions.py  furl.py
src/lib/civetweb/: civetweb.c
src/lib/compat/: bsd-asprintf.c  bsd-snprintf.c  inet_pton.c  memrchr.c
src/lib/hash/: hash.c  htable.c
src/lib/include/faup/: base64.h  compat.h  compiler.h  datadir.h  decode.h  emulation.h  endian.h  errors.h  faup.h  features.h  handler.h  longlong.h  modules.h  options.h  output.h  portable.h  return-codes.h  scheme-codes.h  snapshot-file.h  snapshot.h  tld-tree.h  tld.h  urllengths.h  utarray.h  utils.h  version.h.cmake  webserver.h
src/lib/include/faup/b64/: cdecode.h  cencode.h
src/lib/include/faup/hash/: hash.h  htable.h  htable_type.h
src/lib/include/furl/: decode.h  errors.h  features.h  furl.h  handler.h  handlers.h  portable.h  return-codes.h  scheme-codes.h  version.h.cmake
src/lib/miniz/: miniz.c
src/lib/modules/: CMakeLists.txt  README.emulation  emulation_ie.lua  ipv4toint.lua  printcsv.lua  redis-url-threatintel.lua  sample_uppercase.lua  uppercase.lua  writeall.lua  writeinput.lua
src/tests/: CMakeLists.txt  add_url.sh  base64.c  create_test_files.sh  hashtable.c  issue120.c  issue36.c  json-tester.c  multithreads.c  snapshot.c  someurls.txt  test_faup.sh  test_faup.sh.cmake  test_furl.sh  urls.json  urls.txt  urls.txt.ref  urlsplit.c
src/tests/benchs/: benchs.txt  regex.1  test_faup.py  test_qurl.py  test_regex.py  test_urllib.py
src/tests/docker/issue94/: Dockerfile  faup-test.cron  runfaup.sh
src/tests/issues/: 24  24.options  24.ref  27  27.ref  28  28.options  28.ref  30  30.options  30.ref  33  69  69.options  69.ref
src/tests/ref-files/: argument.txt  fileargument.txt  urls.txt.emulation_ie  urls.txt.json  urls.txt.json_tld_one_only  urls.txt.tld_one_only  urls.txt.vanilla  urls.txt.vanilla.credential  urls.txt.vanilla.domain  urls.txt.vanilla.fragment  urls.txt.vanilla.host  urls.txt.vanilla.port  urls.txt.vanilla.query_string  urls.txt.vanilla.resource_path  urls.txt.vanilla.scheme  urls.txt.vanilla.subdomain  urls.txt.vanilla.tld
src/tools/: CMakeLists.txt  browse-colors.h  browse-widgets.c  browse-widgets.h  browse.c  browse.h  faup.c  furl.c  shell.c  shell.h  win32-getopt.c
src/tools/splunk_lookup/: package.sh
src/tools/splunk_lookup/default/: app.conf
src/tools/splunk_lookup/faup/default/: transforms.conf
src/tools/splunk_lookup/local/: app.conf
stylesheets/: stylesheet.css
